<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yadla.converter.MainActivity">

    <!--<Spinner-->
        <!--android:id="@+id/sort_by_spinner"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAlignment="center">-->
        <!---->
    <!--</Spinner>-->


    <TextView
        android:id="@+id/title_cent_inch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/title_cent_inch"
        android:text="@string/centimeter_to_inches_conversion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#4689C8"
        android:layout_marginTop="50dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textCenti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editinch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/centimeter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textInch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editcent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/inches"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editinch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editcent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editcent"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editcent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonConvert"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/buttonConvert"
        android:layout_below="@+id/editinch"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editcent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/convert" />

    <Button
        android:id="@+id/buttoninch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonConvert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/buttoninches"/>

</RelativeLayout>
